--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@kokomi/w3g-parser",
-  "version": "0.0.3",
+  "name": "@kokomi/w3g-parser-browser",
+  "version": "0.0.1",
   "main": "dist/lib/index.js",
   "types": "dist/types/index.d.ts",
   "scripts": {
@@ -9,16 +9,17 @@
   "type": "commonjs",
   "author": "Kokomi",
   "license": "MIT",
-  "description": "A native JavaScript WarCraft 3 replay parser implementation.",
+  "description": "A native JavaScript WarCraft 3 replay parser implementation. Browser implementation",
   "files": [
     "dist"
   ],
-  "peerDependencies": {
-    "bytebuffer": "^5.0.1"
-  },
+  "repository": "https://github.com/kirill-782/w3g-replay-parser-browser",
   "devDependencies": {
-    "@types/bytebuffer": "^5.0.44",
-    "@types/node": "^18.7.18",
+    "@types/pako": "^2.0.0",
+    "@typescript/lib-dom": "npm:@types/web@^0.0.75",
     "typescript": "^4.8.3"
+  },
+  "dependencies": {
+    "pako": "^2.0.4"
   }
 }
